trash&garbage/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/question-processing-system/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: question-system
  labels:
    name: question-system
    monitoring: enabled
